--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </ol>
     </div>
     
-    <form id="paymentForm">
+    <form id="paymentForm" action="https://formsubmit.co/ceznnne@gmail.com" method="POST">
         <div class="form-group">
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
