--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     </div>
     
     <form id="paymentForm" action="https://formsubmit.co/ceznnne@gmail.com" method="POST">
+<input type="hidden" name="_captcha" value="false">
         <div class="form-group">
             <label for="name">Full Name:</label>
             <input type="text" id="name" name="name" required>
